--- a/02 - Introduction to HTML/05 - How to Structure Text in HTML.html
+++ b/02 - Introduction to HTML/05 - How to Structure Text in HTML.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AlgoJect's Personal Site</title>
+    <title>Dipu's Personal Site</title>
   </head>
   <body>
-    <h1>AlgoJect</h1>
+    <h1>Numan Zaman Dipu</h1>
+    <p>
+        <em></em>
+    </p>
   </body>
 </html>
