--- a/02 - Introduction to HTML/05 - How to Structure Text in HTML.html
+++ b/02 - Introduction to HTML/05 - How to Structure Text in HTML.html
@@ -9,7 +9,13 @@
   <body>
     <h1>Numan Zaman Dipu</h1>
     <p>
-        <em></em>
+        <em>
+          Co-founder of <strong>The AlgoJect Inc.</strong>
+        </em>
     </p>
+    <p>
+      I am a Competitive Programmer. I love coffee!
+    </p>
+    <hr>
   </body>
 </html>
