--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <a href="02 - Introduction to HTML/01 - Introduction to HTML.html">
-        01 - Introduction to HTML</a>
+        01 - Introduction to HTML</a> <br>
     <a href="02 - Introduction to HTML/02 - The Anatomy of an HTML Tag.html">
-        02 - The Anatomy of an HTML Tag</a>
+        02 - The Anatomy of an HTML Tag</a> <br>
     <a href="02 - Introduction to HTML/03 - What we're building - HTML Personal Site.html">
-        03 - What we're building - HTML Personal Site</a>
+        03 - What we're building - HTML Personal Site</a> <br>
     <a href="02 - Introduction to HTML/04 - What is The HTML Boilerplate_.html">
-        04 - What is The HTML Boilerplate_</a>
+        04 - What is The HTML Boilerplate_</a> <br>
     <a href="02 - Introduction to HTML/05 - How to Structure Text in HTML.html">
-        05 - How to Structure Text in HTML</a>
+        05 - How to Structure Text in HTML</a> <br>
 </body>
 </html>
