--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         04 - What is The HTML Boilerplate_</a> <br>
     <a href="02 - Introduction to HTML/05 - How to Structure Text in HTML.html">
         05 - How to Structure Text in HTML</a> <br>
+    <a href="02 - Introduction to HTML/06 - HTML Lists">
+        06 - HTML Lists</a> <br>
 </body>
 
 </html>
