--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         06 - HTML Lists</a> <br>
     <a href="02 - Introduction to HTML/07 - HTML Image Elements.html">
         07 - HTML Image Elements</a> <br>
+    <a href="02 - Introduction to HTML/08 - HTML Links and Anchor Tags.html">
+        08 - HTML Links and Anchor Tags</a> <br>
 </body>
 
 </html>
