--- a/02 - Introduction to HTML/08 - HTML Links and Anchor Tags/08 - HTML Links and Anchor Tags copy.html
+++ b/02 - Introduction to HTML/08 - HTML Links and Anchor Tags/08 - HTML Links and Anchor Tags copy.html
@@ -25,12 +25,8 @@
         <li>Dhaka College</li>
         <li>Chittagong University of Engineering and Technology</li>
     </ul>
-    <h3>Hobbies</h3>
-    <ol>
-        <li>Competitive Programming</li>
-        <li>Learning New Programming Language</li>
-        <li>Gossiping with Friends</li>
-    </ol>
+    <h3><a href="My Hobbies.html">Hobbies</a></h3>
+    
   </body>
 
 </html>
