--- a/02 - Introduction to HTML/08 - HTML Links and Anchor Tags/08 - HTML Links and Anchor Tags copy.html
+++ b/02 - Introduction to HTML/08 - HTML Links and Anchor Tags/08 - HTML Links and Anchor Tags copy.html
@@ -25,7 +25,8 @@
         <li>Dhaka College</li>
         <li>Chittagong University of Engineering and Technology</li>
     </ul>
-    <h3><a href="My Hobbies.html">Hobbies</a></h3>
+    <h3><a href="My Hobbies.html">Hobbies</a></h3><br>
+    <h3><a href="Contact Me.html">Contact Me</a></h3>
     
   </body>
 
