--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         06 - HTML Lists</a> <br>
     <a href="02 - Introduction to HTML/07 - HTML Image Elements.html">
         07 - HTML Image Elements</a> <br>
-    <a href="02 - Introduction to HTML/08 - HTML Links and Anchor Tags/08 - HTML Links and Anchor Tags copy.html ">
+    <a href="02 - Introduction to HTML/08 - HTML Links and Anchor Tags/08 - HTML Links and Anchor Tags.html">
         08 - HTML Links and Anchor Tags</a> <br>
 </body>
 
