index  update for 301

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <br>
     <br>
     <br>
-    
+    <a href="03 - Intermediate HTML/01 - HTML Tables.html">
+        01 - HTML Tables</a> <br>
 </body>
 
 </html>
