index update for 302

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <br>
     <a href="03 - Intermediate HTML/01 - HTML Tables.html">
         01 - HTML Tables</a> <br>
+    <a href="03 - Intermediate HTML/02 - Using HTML Tables for Layout.html">
+        02 - Using HTML Tables for Layout</a> <br>
 </body>
 
 </html>
