--- a/03 - Intermediate HTML/02 - Using HTML Tables for Layout.html
+++ b/03 - Intermediate HTML/02 - Using HTML Tables for Layout.html
@@ -7,18 +7,24 @@
     <title>Dipu's Personal Site</title>
   </head>
   <body>
-    <img src="https://i.imgur.com/giOUIv3.png" alt="AlgoJect logo" style="height: 200px; width: auto;">
+    <table cellspacing="20">
+        <tr>
+            <td>
+                <img src="https://i.imgur.com/giOUIv3.png" alt="AlgoJect logo" style="height: 200px; width: auto;">
+            </td>
+            <td><h1>Numan Zaman Dipu</h1>
+                <p>
+                    <em>
+                      Co-founder of <strong><a href="https://algoject.github.io/">The AlgoJect Inc.</a></strong>
+                    </em>
+                </p>
+                <p>
+                  I am a Competitive Programmer. I love coffee!
+                </p>
+            </td>
+        </tr>
+    </table>
     
-    <h1>Numan Zaman Dipu</h1>
-    <p>
-        <em>
-          Co-founder of <strong><a href="https://algoject.github.io/">The AlgoJect Inc.</a></strong>
-        </em>
-    </p>
-    <p>
-      I am a Competitive Programmer. I love coffee!
-    </p>
-
     <hr>
 
     <h3>Education</h3>
