index update for 303

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         01 - HTML Tables</a> <br>
     <a href="03 - Intermediate HTML/02 - Using HTML Tables for Layout.html">
         02 - Using HTML Tables for Layout</a> <br>
+    <a href="03 - Intermediate HTML/03 - HTML Tables Code Challenge.html">
+        03 - HTML Tables Code Challenge</a> <br>
 </body>
 
 </html>
