section 3 full updated

--- a/03 - Intermediate HTML/05 - HTML Tables Solution Walkthrough.html
+++ b/03 - Intermediate HTML/05 - HTML Tables Solution Walkthrough.html
@@ -35,7 +35,7 @@
     </ul>
     <h3>Work Experiences</h3>
     
-    <table>
+    <table cellspacing="10">
       <thead>
         <tr>
           <th>Dates</th>
@@ -62,46 +62,25 @@
 
     <h3>Skills</h3>
 
-
-    <table>
+    <table cellspacing="10">
         <tr>
-            <td>
-                <table>
-                <thead></thead>
-                <tbody>
-                  <tr>
-                   <td>Web Development</td>
-                   <td>☆☆☆☆☆</td>
-                  </tr>
-                  <tr>
-                   <td>Python</td>
-                   <td>☆☆☆☆</td>
-                  </tr>
-                </tbody>
-                <tfoot></tfoot>
-              </table>
-            </td>
-            <td>
-                <table>
-                <thead></thead>
-                <tbody>
-                  <tr>
-                   <td>Javascript</td>
-                   <td>☆☆☆</td>
-                  </tr>
-                  <tr>
-                   <td>Flutter</td>
-                   <td>☆☆☆</td>
-                  </tr>
-                </tbody>
-                <tfoot></tfoot>
-              </table>
-            </td>
+            <td>Web Development</td>
+            <td>☆☆☆☆☆</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td>☆☆☆☆</td>
+        </tr>
+        <tr>
+            <td>JavaScript</td>
+            <td>☆☆☆☆</td>
+        </tr>
+        <tr>
+            <td>Flutter</td>
+            <td>☆☆☆</td>
         </tr>
     </table>
-
-
-
+    
 
     <hr>
 
