index update for 304-5

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         02 - Using HTML Tables for Layout</a> <br>
     <a href="03 - Intermediate HTML/03 - HTML Tables Code Challenge.html">
         03 - HTML Tables Code Challenge</a> <br>
+    <a href="03 - Intermediate HTML/04 - How to Type Emojis.html">
+        04 - How to Type Emojis</a> <br>
+    <a href="03 - Intermediate HTML/05 - HTML Tables Solution Walkthrough.html">
+        05 - HTML Tables Solution Walkthrough</a> <br>
 </body>
 
 </html>
