bug fixed for anchor tag

--- a/03 - Intermediate HTML/06 - HTML Forms/06 - HTML Forms.html
+++ b/03 - Intermediate HTML/06 - HTML Forms/06 - HTML Forms.html
@@ -88,8 +88,8 @@
 
     <hr>
 
-    <a href="../02 - Introduction to HTML/08 - HTML Links and Anchor Tags/My Hobbies.html">Hobbies</a>
-    <a href="../02 - Introduction to HTML/08 - HTML Links and Anchor Tags/Contact Me.html">Contact Me</a>
+    <a href="../../02 - Introduction to HTML/08 - HTML Links and Anchor Tags/My Hobbies.html">Hobbies</a>
+    <a href="../../02 - Introduction to HTML/08 - HTML Links and Anchor Tags/Contact Me.html">Contact Me</a>
     
   </body>
 
