--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         04 - How to Type Emojis</a> <br>
     <a href="03 - Intermediate HTML/05 - HTML Tables Solution Walkthrough.html">
         05 - HTML Tables Solution Walkthrough</a> <br>
+    <a href="03 - Intermediate HTML/06 - HTML Forms.html">
+        06 - HTML Forms</a> <br>
 </body>
 
 </html>
