index and contact

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         04 - How to Type Emojis</a> <br>
     <a href="03 - Intermediate HTML/05 - HTML Tables Solution Walkthrough.html">
         05 - HTML Tables Solution Walkthrough</a> <br>
-    <a href="03 - Intermediate HTML/06 - HTML Forms.html">
+    <a href="03 - Intermediate HTML/06 - HTML Forms/06 - HTML Forms.html">
         06 - HTML Forms</a> <br>
 </body>
 
