form action experiment

--- a/03 - Intermediate HTML/06 - HTML Forms/Contact Me.html
+++ b/03 - Intermediate HTML/06 - HTML Forms/Contact Me.html
@@ -12,7 +12,7 @@
     <p>077263718463</p>
     <p>myemail@algoject.com</p>
     <br>
-    <form action="Contact Me.html">
+    <form action="../05 - HTML Tables Solution Walkthrough.html">
         <label for="">Your Name:</label>
         <input type="text">
         <input type="color">
