input challenge update

--- a/03 - Intermediate HTML/06 - HTML Forms/Contact Me.html
+++ b/03 - Intermediate HTML/06 - HTML Forms/Contact Me.html
@@ -21,5 +21,7 @@
         <input type="password">
         <input type="submit">
     </form>   
+    <br><br>
+    <a href="input.html">Input Challenge Page</a>
 </body>
 </html>
