--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         05 - HTML Tables Solution Walkthrough</a> <br>
     <a href="03 - Intermediate HTML/06 - HTML Forms/06 - HTML Forms.html">
         06 - HTML Forms</a> <br>
+    <a href="03 - Intermediate HTML/07 - Forms in Practice - Create a Contact Me Form.html">
+        07 - Forms in Practice - Create a Contact Me Form</a> <br>
 </body>
 
 </html>
