publishing the website

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         06 - HTML Forms</a> <br>
     <a href="03 - Intermediate HTML/07 - Forms in Practice - Create a Contact Me Form.html">
         07 - Forms in Practice - Create a Contact Me Form</a> <br>
+    <a href="03 - Intermediate HTML/08 - Publish Your Website_.html">
+        08 - Publish Your Website_</a> <br>
 </body>
 
 </html>
