index and introduction to css update

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         07 - Forms in Practice - Create a Contact Me Form</a> <br>
     <a href="03 - Intermediate HTML/08 - Publish Your Website_.html">
         08 - Publish Your Website_</a> <br>
+    <br>
+    <br>
+    <br>
+    <a href="04 - Introduction to CSS/01 - Introduction to CSS.html">
+        01 - Introduction to CSS</a> <br>
+    <a href="04 - Introduction to CSS/02 - Inline CSS.html">
+        02 - Inline CSS</a> <br>
+
 </body>
 
 </html>
