--- a/04 - Introduction to CSS/02 - Inline CSS.html
+++ b/04 - Introduction to CSS/02 - Inline CSS.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dipu's Personal Site</title>
   </head>
-  <body>
+  <body style="background-color: #EAF6f6;">
     <table cellspacing="20">
         <tr>
             <td>
