index update for internal css

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         01 - Introduction to CSS</a> <br>
     <a href="04 - Introduction to CSS/02 - Inline CSS.html">
         02 - Inline CSS</a> <br>
+    <a href="04 - Introduction to CSS/03 - Internal CSS.html">
+        03 - Internal CSS</a> <br>
 
 </body>
 
