--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         02 - Inline CSS</a> <br>
     <a href="04 - Introduction to CSS/03 - Internal CSS.html">
         03 - Internal CSS</a> <br>
+    <a href="04 - Introduction to CSS/04 External CSS/04 - External CSS.html">
+        04 - External CSS</a> <br>
 
 </body>
 
