--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         03 - Internal CSS</a> <br>
     <a href="04 - Introduction to CSS/04 External CSS/04 - External CSS.html">
         04 - External CSS</a> <br>
+    <a href="04 - Introduction to CSS/05 - How to Debug CSS Code.html">
+        05 - How to Debug CSS Code</a> <br>
 
 </body>
 
