css syntax update

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         04 - External CSS</a> <br>
     <a href="04 - Introduction to CSS/05 - How to Debug CSS Code.html">
         05 - How to Debug CSS Code</a> <br>
+    <a href="04 - Introduction to CSS/06 - The Anatomy of CSS Syntax/index.html">
+        06 - The Anatomy of CSS Syntax</a> <br>
 
 </body>
 
