--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
         02 - Inline CSS</a> <br>
     <a href="04 - Introduction to CSS/03 - Internal CSS.html">
         03 - Internal CSS</a> <br>
-    <a href="04 - Introduction to CSS/04 External CSS/04 - External CSS.html">
+    <a href="04 - Introduction to CSS/04 - External CSS/04 - External CSS.html">
         04 - External CSS</a> <br>
     <a href="04 - Introduction to CSS/05 - How to Debug CSS Code.html">
         05 - How to Debug CSS Code</a> <br>
     <a href="04 - Introduction to CSS/06 - The Anatomy of CSS Syntax/index.html">
         06 - The Anatomy of CSS Syntax</a> <br>
+    <a href="04 - Introduction to CSS/07 - CSS Selectors/index.html">
+        07 - CSS Selectors</a> <br>
 
 </body>
 
