rename bug fixed

--- a/04 - Introduction to CSS/05 - How to Debug CSS Code.html
+++ b/04 - Introduction to CSS/05 - How to Debug CSS Code.html
@@ -90,8 +90,8 @@
 
     <hr>
 
-    <a href="04 External CSS/My Hobbies.html">Hobbies</a>
-    <a href="04 External CSS/Contact Me.html">Contact Me</a>
+    <a href="04 - External CSS/My Hobbies.html">Hobbies</a>
+    <a href="04 - External CSS/Contact Me.html">Contact Me</a>
     
   </body>
 
