--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         06 - The Anatomy of CSS Syntax</a> <br>
     <a href="04 - Introduction to CSS/07 - CSS Selectors/index.html">
         07 - CSS Selectors</a> <br>
+    <a href="04 - Introduction to CSS/08 - Classes vs. Ids/index.html"></a>
 
 </body>
 
