index update for selector 2

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         06 - The Anatomy of CSS Syntax</a> <br>
     <a href="04 - Introduction to CSS/07 - CSS Selectors/index.html">
         07 - CSS Selectors</a> <br>
-    <a href="04 - Introduction to CSS/08 - Classes vs. Ids/index.html"></a>
+    <a href="04 - Introduction to CSS/08 - Classes vs. Ids/index.html">
+        08 - Classes vs. Ids</a> <br>
 
 </body>
 
