--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <br>
     <br>
     <br>
+    <a href="05 - Intermediate CSS/01 - What We'll Make - Stylised Personal Site/index.html">
+        01 - What We'll Make - Stylised Personal Site</a> <br>
+    <a href="05 - Intermediate CSS/02 - What Are Favicons_/index.html">
+        02 - What Are Favicons?</a> <br>
     
 
 </body>
