--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         01 - What We'll Make - Stylised Personal Site</a> <br>
     <a href="05 - Intermediate CSS/02 - What Are Favicons_/index.html">
         02 - What Are Favicons?</a> <br>
+    <a href="05 - Intermediate CSS/03 - HTML Divs/index.html">
+        03 - HTML Divs</a> <br>
     
 
 </body>
