box model index

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
         02 - What Are Favicons?</a> <br>
     <a href="05 - Intermediate CSS/03 - HTML Divs/index.html">
         03 - HTML Divs</a> <br>
+    <a href="05 - Intermediate CSS/04 - The Box Model of Website Styling/index.html">
+        04 - The Box Model of Website Styling</a> <br>
     
 
 </body>
