display property update

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         03 - HTML Divs</a> <br>
     <a href="05 - Intermediate CSS/04 - The Box Model of Website Styling/index.html">
         04 - The Box Model of Website Styling</a> <br>
-    
+    <a href="05 - Intermediate CSS/05 - CSS Display Property/index.html">
+        05 - CSS Display Property</a> <br>
 
 </body>
 
