--- a/05 - Intermediate CSS/05 - CSS Display Property/index.html
+++ b/05 - Intermediate CSS/05 - CSS Display Property/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://i.imgur.com/niqite9.png">
     <title>Numan Zaman Dipu</title>
 </head>
@@ -12,8 +12,11 @@
 <body>
     
     <div class="top-container">
+        <img src="https://i.imgur.com/kX1SAWR.png" alt="cloud-img">
         <h1>I'm Dipu</h1>
-        <p>A Programmer!</p>
+        <p>A <span class="pro">Pro</span>grammer!</p>
+        <img src="https://i.imgur.com/kX1SAWR.png" alt="cloud-img">
+        <img src="https://i.imgur.com/UZsBTSc.png" alt="mountain-img">
     </div>
 
     <div class="middle-container">
