--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         04 - The Box Model of Website Styling</a> <br>
     <a href="05 - Intermediate CSS/05 - CSS Display Property/index.html">
         05 - CSS Display Property</a> <br>
+    <a href="05 - Intermediate CSS/06 - Learn More About Web Design/index.html">
+        06 - Learn More About Web Design</a> <br>
 
 </body>
 
