challenge file linkup

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         05 - CSS Display Property</a> <br>
     <a href="05 - Intermediate CSS/06 - Learn More About Web Design/index.html">
         06 - Learn More About Web Design</a> <br>
+    <a href="05 - Intermediate CSS/07 - CSS Static and Relative Positioning/index.html">
+        07 - CSS Static and Relative Positioning</a> <br>
 
 </body>
 
