index update for absolute position

--- a/05 - Intermediate CSS/08 - Absolute positioning/index.html
+++ b/05 - Intermediate CSS/08 - Absolute positioning/index.html
@@ -11,7 +11,11 @@
 
 <body>
     
-    <div class="red">
+    <div class="container">
+
+        <div class="red">
+        </div>
+
     </div>
 
     <div class="blue">
@@ -19,6 +23,33 @@
 
     <div class="yellow">
     </div>
+
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
 
     
 </body>
