main index update for absolute position

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         06 - Learn More About Web Design</a> <br>
     <a href="05 - Intermediate CSS/07 - CSS Static and Relative Positioning/index.html">
         07 - CSS Static and Relative Positioning</a> <br>
+    <a href="05 - Intermediate CSS/08 - Absolute positioning/index.html">
+        08 - Absolute positioning</a> <br>
 
 </body>
 
