main index for the dark art

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         07 - CSS Static and Relative Positioning</a> <br>
     <a href="05 - Intermediate CSS/08 - Absolute positioning/index.html">
         08 - Absolute positioning</a> <br>
-
+    <a href="05 - Intermediate CSS/09 - The Dark Art of Centering Elements with CSS/index.html">
+        09 - The Dark Art of Centering Elements with CSS</a> <br>
 </body>
 
 </html>
