--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         08 - Absolute positioning</a> <br>
     <a href="05 - Intermediate CSS/09 - The Dark Art of Centering Elements with CSS/index.html">
         09 - The Dark Art of Centering Elements with CSS</a> <br>
+    <a href="05 - Intermediate CSS/10 - Font Styling in Our Personal Site/index.html"></a>
 </body>
 
 </html>
