--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         08 - Absolute positioning</a> <br>
     <a href="05 - Intermediate CSS/09 - The Dark Art of Centering Elements with CSS/index.html">
         09 - The Dark Art of Centering Elements with CSS</a> <br>
-    <a href="05 - Intermediate CSS/10 - Font Styling in Our Personal Site/index.html"></a>
+    <a href="05 - Intermediate CSS/10 - Font Styling in Our Personal Site/index.html">
+        10 - Font Styling in Our Personal Site</a> <br>
 </body>
 
 </html>
