same file from 510

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         09 - The Dark Art of Centering Elements with CSS</a> <br>
     <a href="05 - Intermediate CSS/10 - Font Styling in Our Personal Site/index.html">
         10 - Font Styling in Our Personal Site</a> <br>
+    <a href="05 - Intermediate CSS/11 - Learn More About Typography/index.html">
+        11 - Learn More About Typography</a> <br>
+
 </body>
 
 </html>
