index update for content

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         10 - Font Styling in Our Personal Site</a> <br>
     <a href="05 - Intermediate CSS/11 - Learn More About Typography/index.html">
         11 - Learn More About Typography</a> <br>
+    <a href="05 - Intermediate CSS/12 - Adding Content to Our Website/index.html">
+        12 - Adding Content to Our Website</a> <br>
 
 </body>
 
