--- a/05 - Intermediate CSS/12 - Adding Content to Our Website/index.html
+++ b/05 - Intermediate CSS/12 - Adding Content to Our Website/index.html
@@ -66,7 +66,7 @@
             <h2>Get In Touch</h2>
             <h3>If you love hot wings as much as I do.</h3>
             <p>Love hot wings as much as I do? Let's talk about how awesome the are!
-                We can code while we east hot wings!
+                We can code while we eat hot wings!
             </p>
             <a class="btn" href="mailto:numanzamandipuu@gmail.com">CONTACT ME</a>
         
