index update for sizing

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         11 - Learn More About Typography</a> <br>
     <a href="05 - Intermediate CSS/12 - Adding Content to Our Website/index.html">
         12 - Adding Content to Our Website</a> <br>
+    <a href="05 - Intermediate CSS/13 - CSS Sizing/index.html">
+        13 - CSS Sizing</a> <br>
 
 </body>
 
