--- a/05 - Intermediate CSS/13 - CSS Sizing/index.html
+++ b/05 - Intermediate CSS/13 - CSS Sizing/index.html
@@ -21,7 +21,7 @@
         <img class="top-cloud" src="https://i.imgur.com/kX1SAWR.png" alt="cloud-img">
 
         <h1>I'm Dipu</h1>
-        <p>A <span class="pro">Pro</span>grammer!</p>
+        <p><h2>A <span class="pro">Pro</span>grammer!</h2></p>
    
         <img class="bottom-cloud" src="https://i.imgur.com/kX1SAWR.png" alt="cloud-img"> <br>
         <img src="https://i.imgur.com/UZsBTSc.png" alt="mountain-img">
