--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         12 - Adding Content to Our Website</a> <br>
     <a href="05 - Intermediate CSS/13 - CSS Sizing/index.html">
         13 - CSS Sizing</a> <br>
+    <a href="05 - Intermediate CSS/14 - Font Properties Challenge 1 - Change the Colours/index.html">
+        14 - Font Properties Challenge 1 - Change the Colours</a> <br>
 
 </body>
 
