--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
         13 - CSS Sizing</a> <br>
     <a href="05 - Intermediate CSS/14 - Font Properties Challenge 1 - Change the Colours/index.html">
         14 - Font Properties Challenge 1 - Change the Colours</a> <br>
+    <a href="05 - Intermediate CSS/15 - Font Properties Challenge 2 - Change the Font Weight/index.html">
+        15 - Font Properties Challenge 2 - Change the Font Weight</a> <br>
 
 </body>
 
