index update for line height

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
         14 - Font Properties Challenge 1 - Change the Colours</a> <br>
     <a href="05 - Intermediate CSS/15 - Font Properties Challenge 2 - Change the Font Weight/index.html">
         15 - Font Properties Challenge 2 - Change the Font Weight</a> <br>
+    <a href="05 - Intermediate CSS/16 - Font Properties Challenge 3 - Change the Line Height/index.html">
+        16 - Font Properties Challenge 3 - Change the Line Height</a> <br>
 
 </body>
 
