index update for solutions

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         15 - Font Properties Challenge 2 - Change the Font Weight</a> <br>
     <a href="05 - Intermediate CSS/16 - Font Properties Challenge 3 - Change the Line Height/index.html">
         16 - Font Properties Challenge 3 - Change the Line Height</a> <br>
+    <a href="05 - Intermediate CSS/17 - CSS Font Property Challenge Solutions/index.html">
+        17 - CSS Font Property Challenge Solutions</a> <br>
 
 </body>
 
