index update for float & clear

--- a/05 - Intermediate CSS/18 - CSS Float and Clear/index.html
+++ b/05 - Intermediate CSS/18 - CSS Float and Clear/index.html
@@ -44,14 +44,14 @@
 
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="" src="https://i.imgur.com/7kslgwK.png" alt="skill-img">
+                <img class="code-img" src="https://i.imgur.com/7kslgwK.png" alt="code-img">
                 <h3>Design & Development</h3>
                 <p>I started learning to code last year because I wanted to participate in Microsoft Imagine Cup. Over time,
                    I have gained a wealth of experience designing and developing web applications.</p>
             </div>
 
             <div class="skill-row">
-                <img class="" src="https://i.imgur.com/c3eTUwA.png" alt="">
+                <img class="chilli-img" src="https://i.imgur.com/c3eTUwA.png" alt="chillies-img">
                 <h3>Hot Wings Challenge</h3>
                 <p>But my best skill is actually in eating hot wings. I am the undisputed king of hot wing challenges.
                    Ghost Peppers and Carolina Reapers are my fabourite snakes.</p>
