main index update for 519

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         16 - Font Properties Challenge 3 - Change the Line Height</a> <br>
     <a href="05 - Intermediate CSS/17 - CSS Font Property Challenge Solutions/index.html">
         17 - CSS Font Property Challenge Solutions</a> <br>
+    <a href="05 - Intermediate CSS/18 - CSS Float and Clear/index.html">
+        18 - CSS Float and Clear</a> <br>
 
 </body>
 
