--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         17 - CSS Font Property Challenge Solutions</a> <br>
     <a href="05 - Intermediate CSS/18 - CSS Float and Clear/index.html">
         18 - CSS Float and Clear</a> <br>
+    <a href="05 - Intermediate CSS/19 - CSS Challenge/index.html">
+        19 - CSS Challenge</a> <br>
+    <a href="05 - Intermediate CSS/20 - Stylised Personal Site Solution Walkthrough/index.html">
+        20 - Stylised Personal Site Solution Walkthrough</a> <br>
 
 </body>
 
