--- a/index.html
+++ b/index.html
@@ -107,12 +107,10 @@
         19 - CSS Challenge</a> <br>
     <a href="05 - Intermediate CSS/20 - Stylised Personal Site Solution Walkthrough/index.html">
         20 - Stylised Personal Site Solution Walkthrough</a> <br>
-
-
-
     <br>
     <br>
     <br>
+    <a href="06 - Introduction to Bootstrap 4/01 - What is Bootstrap_/index.html"></a>
 
 </body>
 
