minor bug fixed

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     <br>
     <br>
     <br>
-    <a href="06 - Introduction to Bootstrap 4/01 - What is Bootstrap_/index.html"></a>
+    <a href="06 - Introduction to Bootstrap 4/01 - What is Bootstrap_/index.html">
+        01 - What is Bootstrap?</a>
 
 </body>
 
