index update for installation

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
     <br>
     <br>
     <a href="06 - Introduction to Bootstrap 4/01 - What is Bootstrap_/index.html">
-        01 - What is Bootstrap?</a>
+        01 - What is Bootstrap?</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/02 - Installing Bootstrap/index.html">
+        02 - Installing Bootstrap</a> <br>
 
 </body>
 
