--- a/index.html
+++ b/index.html
@@ -113,10 +113,13 @@
     <a href="06 - Introduction to Bootstrap 4/01 - What is Bootstrap_/index.html">
         01 - What is Bootstrap?</a> <br>
     <a href="06 - Introduction to Bootstrap 4/02 - Installing Bootstrap/index.html">
-        02 - Installing Bootstrap</a> <br>
+        02 - Installing Bootstrap</a> <br> 
+
+    <!--anchor tag must be changed after release v1.0.1-->
+
     <a href="https://github.com/numanzamandipuu/Web-Development-Bootcamp/tree/S06-L01-L05/06%20-%20Introduction%20to%20Bootstrap%204/03%20-%20Web%20Design%20101%20-%20Wireframing">
         03 - Web Design 101 - Wireframing</a> <br>
-        
+
 </body>
 
 </html>
