main index upadate for nav

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 
     <a href="https://github.com/numanzamandipuu/Web-Development-Bootcamp/tree/S06-L01-L05/06%20-%20Introduction%20to%20Bootstrap%204/03%20-%20Web%20Design%20101%20-%20Wireframing">
         03 - Web Design 101 - Wireframing</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/04 - The Bootstrap Navigation Bar/index.html">
+        04 - The Bootstrap Navigation Bar
+    </a>
 
 </body>
 
