--- a/06 - Introduction to Bootstrap 4/04 - The Bootstrap Navigation Bar/index.html
+++ b/06 - Introduction to Bootstrap 4/04 - The Bootstrap Navigation Bar/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TinDog</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a href="" class="navbar-brand ms-3">TinDog</a>
+      <a href="" class="navbar-brand ms-3">AlgoJect</a>
       <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" style="padding-left: 15px;">
       <ul class="navbar-nav ms-auto me-3">
         <li class="nav-item">
           <a href="" class="nav-link">Contact</a>
@@ -25,6 +25,7 @@
           <a href="" class="nav-link">Download</a>
         </li>
       </ul>
+      </div>
     </nav>
 
 
