--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
         04 - The Bootstrap Navigation Bar</a> <br>
     <a href="06 - Introduction to Bootstrap 4/05 - What We'll Make - TinDog/index.html">
         05 - What We'll Make - TinDog</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/06 - Download the Starting Files/index.html">
+        06 - Download the Starting Files</a> <br>
 
 </body>
 
