--- a/06 - Introduction to Bootstrap 4/06 - Download the Starting Files/index.html
+++ b/06 - Introduction to Bootstrap 4/06 - Download the Starting Files/index.html
@@ -24,7 +24,7 @@
       <button type="button">Download</button>
     </div>
     <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
+      <img src="https://i.imgur.com/AhBC81a.png" alt="iphone-mockup">
     </div>
 
   </section>
@@ -51,7 +51,7 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <img src="https://i.imgur.com/4QlGtiP.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -64,10 +64,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img src="https://i.imgur.com/ZM0U36c.png" alt="tc-logo">
+    <img src="https://i.imgur.com/mBrYGBA.png" alt="tnw-logo">
+    <img src="https://i.imgur.com/DPD9kfF.png" alt="biz-insider-logo">
+    <img src="https://i.imgur.com/mbI9GLh.png" alt="mashable-logo">
 
   </section>
 
