--- a/06 - Introduction to Bootstrap 4/07 - Setting Up Our New Project/index.html
+++ b/06 - Introduction to Bootstrap 4/07 - Setting Up Our New Project/index.html
@@ -13,8 +13,26 @@
 
     <!-- Nav Bar -->
 
-
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a href="" class="navbar-brand ms-3">TinDog</a>
+      <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" style="padding-left: 15px;">
+      <ul class="navbar-nav ms-auto me-3">
+        <li class="nav-item">
+          <a href="" class="nav-link">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link">Download</a>
+        </li>
+      </ul>
+      </div>
+    </nav>
+    
 
     <!-- Title -->
 
