--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
         05 - What We'll Make - TinDog</a> <br>
     <a href="06 - Introduction to Bootstrap 4/06 - Download the Starting Files/index.html">
         06 - Download the Starting Files</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/07 - Setting Up Our New Project/index.html">
+        07 - Setting Up Our New Project</a> <br>
 
 </body>
 
