--- a/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
+++ b/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
@@ -7,7 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <div class="row">
+      <div class="col" style="background-color: red; border: 1px solid;">
+        col
+      </div>
+      <div class="col" style="background-color: red; border: 1px solid;">
+        col
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6" style="background-color: green; border: 1px solid;">
+        col-6
+      </div>
+      <div class="col-3" style="background-color: green; border: 1px solid;">
+        col-3
+      </div>
+      <div class="col-2" style="background-color: green; border: 1px solid;">
+        col-2
+      </div>
+      <div class="col-1" style="background-color: green; border: 1px solid;">
+        col-1
+      </div>
+    </div>
+
+    <div class="row">
+      <div>
+      </div>
+    </div>
+    
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+ 
   </body>
 </html>
