index for grid layout

--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
         06 - Download the Starting Files</a> <br>
     <a href="06 - Introduction to Bootstrap 4/07 - Setting Up Our New Project/index.html">
         07 - Setting Up Our New Project</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html">
+        08 - Bootstrap Grid Layout System</a> <br>
 
 </body>
 
