--- a/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
+++ b/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
@@ -33,7 +33,11 @@
     </div>
 
     <div class="row">
-      <div>
+      <div class="col-mid-6" style="background-color: green; border: 1px solid;">
+        col-md-6
+      </div>
+      <div class="col-mid-6" style="background-color: green; border: 1px solid;">
+        col-md-6
       </div>
     </div>
     
