--- a/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
+++ b/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
@@ -21,23 +21,24 @@
       <div class="col-6" style="background-color: green; border: 1px solid;">
         col-6
       </div>
-      <div class="col-3" style="background-color: green; border: 1px solid;">
-        col-3
+      <div class="col-6" style="background-color: green; border: 1px solid;">
+        col-6
       </div>
-      <div class="col-2" style="background-color: green; border: 1px solid;">
-        col-2
-      </div>
-      <div class="col-1" style="background-color: green; border: 1px solid;">
-        col-1
-      </div>
+
     </div>
 
     <div class="row">
-      <div class="col-md-6" style="background-color: blue; border: 1px solid;">
-        col-md-6
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid;">
+        col-lg-3 col-md-4 col-sm-6
       </div>
-      <div class="col-md-6" style="background-color: blue; border: 1px solid;">
-        col-md-6
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid;">
+        col-lg-3 col-md-4 col-sm-6
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid;">
+        col-lg-3 col-md-4 col-sm-6
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid;">
+        col-lg-3 col-md-4 col-sm-6
       </div>
     </div>
     
