--- a/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
+++ b/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
@@ -41,6 +41,27 @@
         col-lg-3 col-md-4 col-sm-6
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
+        col-lg-2 col-md-3
+      </div>
+      <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
+        col-lg-2 col-md-3
+      </div>
+      <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
+        col-lg-2 col-md-3
+      </div>
+      <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
+        col-lg-2 col-md-3
+      </div>
+      <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
+        col-lg-2 col-md-3
+      </div>
+      <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
+        col-lg-2 col-md-3
+      </div>
+    </div>
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
