index update for font weight

--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
         07 - Setting Up Our New Project</a> <br>
     <a href="06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html">
         08 - Bootstrap Grid Layout System</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/09 - Getting Montserrat Black and other Font Weights/index.html">
+        09 - Getting Montserrat Black and other Font Weights</a> <br>
 
 </body>
 
