margin bug fixed by container class

--- a/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
+++ b/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="row">
+    <div class="row container">
       <div class="col" style="background-color: red; border: 1px solid;">
         col
       </div>
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row container">
       <div class="col-6" style="background-color: green; border: 1px solid;">
         col-6
       </div>
@@ -27,7 +27,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row container">
       <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid;">
         col-lg-3 col-md-4 col-sm-6
       </div>
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row container">
       <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
         col-lg-2 col-md-3
       </div>
