index for adding grid layout

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
         08 - Bootstrap Grid Layout System</a> <br>
     <a href="06 - Introduction to Bootstrap 4/09 - Getting Montserrat Black and other Font Weights/index.html">
         09 - Getting Montserrat Black and other Font Weights</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/10 - Adding Grid Layouts to Our Website/index.html">
+        10 - Adding Grid Layouts to Our Website</a> <br>
 
 </body>
 
