--- a/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
+++ b/06 - Introduction to Bootstrap 4/08 - Bootstrap Grid Layout System/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="row container">
+    <div class="row mx-auto">
       <div class="col" style="background-color: red; border: 1px solid;">
         col
       </div>
@@ -16,18 +16,17 @@
         col
       </div>
     </div>
-
-    <div class="row container">
+    
+    <div class="row mx-auto">
       <div class="col-6" style="background-color: green; border: 1px solid;">
         col-6
       </div>
       <div class="col-6" style="background-color: green; border: 1px solid;">
         col-6
       </div>
-
     </div>
 
-    <div class="row container">
+    <div class="row mx-auto">
       <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid;">
         col-lg-3 col-md-4 col-sm-6
       </div>
@@ -42,7 +41,7 @@
       </div>
     </div>
 
-    <div class="row container">
+    <div class="row mx-auto">
       <div class="col-lg-2 col-md-3" style="background-color: gray; border: 1px solid;">
         col-lg-2 col-md-3
       </div>
