--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
         09 - Getting Montserrat Black and other Font Weights</a> <br>
     <a href="06 - Introduction to Bootstrap 4/10 - Adding Grid Layouts to Our Website/index.html">
         10 - Adding Grid Layouts to Our Website</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/11 - A Note About CSS Link Order/index.html">
+        11 - A Note About CSS Link Order</a> <br>
 
 </body>
 
