--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         10 - Adding Grid Layouts to Our Website</a> <br>
     <a href="06 - Introduction to Bootstrap 4/11 - A Note About CSS Link Order/index.html">
         11 - A Note About CSS Link Order</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/12 - Bootstrap Containers/index.html"></a>
 
 </body>
 
