div added to host container class

--- a/06 - Introduction to Bootstrap 4/12 - Bootstrap Containers/index.html
+++ b/06 - Introduction to Bootstrap 4/12 - Bootstrap Containers/index.html
@@ -17,6 +17,7 @@
 <body>
 
   <section id="title">
+    <div>
 
     <!-- Nav Bar -->
 
@@ -54,6 +55,7 @@
       </div>
     </div>
 
+    </div>
   </section>
 
 
