--- a/06 - Introduction to Bootstrap 4/12 - Bootstrap Containers/index.html
+++ b/06 - Introduction to Bootstrap 4/12 - Bootstrap Containers/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <section id="title">
-    <div>
+    <div class="container-fluid">
 
     <!-- Nav Bar -->
 
@@ -93,6 +93,7 @@
   <!-- Press -->
 
   <section id="press">
+    
     <img src="https://i.imgur.com/ZM0U36c.png" alt="tc-logo">
     <img src="https://i.imgur.com/mBrYGBA.png" alt="tnw-logo">
     <img src="https://i.imgur.com/DPD9kfF.png" alt="biz-insider-logo">
