main index update for bootstrap button

--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         11 - A Note About CSS Link Order</a> <br>
     <a href="06 - Introduction to Bootstrap 4/12 - Bootstrap Containers/index.html">
         12 - Bootstrap Containers</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/13 - Bootstrap Buttons & Font Awesome/index.html">
+        13 - Bootstrap Buttons & Font Awesome</a> <br>
 
 </body>
 
