--- a/06 - Introduction to Bootstrap 4/13 - Bootstrap Buttons & Font Awesome/index.html
+++ b/06 - Introduction to Bootstrap 4/13 - Bootstrap Buttons & Font Awesome/index.html
@@ -47,7 +47,7 @@
     <div class="row container">
       <div class="col-lg-6">
         <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button">Download</button>
+        <button type="button" class="btn btn-dark">Download</button>
         <button type="button">Download</button>
       </div>
       <div class="col-lg-6">
