--- a/06 - Introduction to Bootstrap 4/13 - Bootstrap Buttons & Font Awesome/index.html
+++ b/06 - Introduction to Bootstrap 4/13 - Bootstrap Buttons & Font Awesome/index.html
@@ -48,7 +48,7 @@
       <div class="col-lg-6">
         <h1>Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark">Download</button>
-        <button type="button">Download</button>
+        <button type="button" class="btn btn-light">Download</button>
       </div>
       <div class="col-lg-6">
       <img src="https://i.imgur.com/AhBC81a.png" alt="iphone-mockup">
