index update for styling site

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
         12 - Bootstrap Containers</a> <br>
     <a href="06 - Introduction to Bootstrap 4/13 - Bootstrap Buttons & Font Awesome/index.html">
         13 - Bootstrap Buttons & Font Awesome</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/index.html">
+        14 - Styling Our Website Challenges and Solutions</a> <br>
 
 </body>
 
