--- a/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/index.html
+++ b/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/index.html
@@ -55,11 +55,11 @@
     <div class="row container">
       <div class="col-lg-6">
         <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i>&nbsp;Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i>&nbsp;Download</button>
+        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>&nbsp;Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>&nbsp;Download</button>
       </div>
       <div class="col-lg-6">
-      <img src="https://i.imgur.com/AhBC81a.png" alt="iphone-mockup">
+      <img class="title-image" src="https://i.imgur.com/AhBC81a.png" alt="iphone-mockup">
       </div>
     </div>
 
