--- a/06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/index.html
+++ b/06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/index.html
@@ -70,16 +70,18 @@
   <!-- Features -->
 
   <section id="features">
+    <div class="row container-fluid">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+      <h3>Easy to use.</h3>
+      <p>So easy to use, even your dog could do it.</p>
+  
+      <h3>Elite Clientele</h3>
+      <p>We have all the dogs, the greatest dogs.</p>
+  
+      <h3>Guaranteed to work.</h3>
+      <p>Find the love of your dog's life or your money back.</p>
+      
+    </div>
   </section>
 
 
