completed index for challenge 01

--- a/06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/index.html
+++ b/06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/index.html
@@ -72,14 +72,23 @@
   <section id="features">
     <div class="row container-fluid">
 
-      <h3>Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
-  
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-  
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+      <div class="col-lg-4 col-sm-12">
+        <i class="fa-solid fa-circle-check fa-4x"></i>
+        <h3 class="features-h3">Easy to use.</h3>
+        <p class="features-paragraph">So easy to use, even your dog could do it.</p>
+      </div>
+
+      <div class="col-lg-4 col-sm-12">
+        <i class="fa-solid fa-bullseye fa-4x"></i>
+        <h3 class="features-h3">Elite Clientele</h3>
+        <p class="features-paragraph">We have all the dogs, the greatest dogs.</p>
+      </div>
+
+      <div class="col-lg-4 col-sm-12">
+        <i class="fa-solid fa-heart fa-4x"></i>
+        <h3 class="features-h3">Guaranteed to work.</h3>
+        <p class="features-paragraph">Find the love of your dog's life or your money back.</p>
+      </div>
       
     </div>
   </section>
