main index for challenge 01

--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
         13 - Bootstrap Buttons & Font Awesome</a> <br>
     <a href="06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/index.html">
         14 - Styling Our Website Challenges and Solutions</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/index.html">
+        15 - Bootstrap Challenge 1</a> <br>
 
 </body>
 
