--- a/06 - Introduction to Bootstrap 4/16 - Solution to Bootstrap Challenge 1/index.html
+++ b/06 - Introduction to Bootstrap 4/16 - Solution to Bootstrap Challenge 1/index.html
@@ -13,7 +13,7 @@
     
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/ec40e74e14.js" crossorigin="anonymous"></script>
@@ -70,26 +70,26 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="row container-fluid">
+    <div class="row">
 
-      <div class="col-lg-4 col-sm-12">
-        <i class="fa-solid fa-circle-check fa-4x"></i>
-        <h3 class="features-h3">Easy to use.</h3>
-        <p class="features-paragraph">So easy to use, even your dog could do it.</p>
+      <div class="feature-box col-lg-4">
+        <i class="icon fa-solid fa-circle-check fa-4x"></i>
+        <h3>Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>  
       </div>
+  
+      <div class="feature-box col-lg-4">
+        <i class="icon fa-solid fa-bullseye fa-4x"></i>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+  
+      <div class="feature-box col-lg-4">
+        <i class="icon fa-solid fa-heart fa-4x"></i>
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+       </div>
 
-      <div class="col-lg-4 col-sm-12">
-        <i class="fa-solid fa-bullseye fa-4x"></i>
-        <h3 class="features-h3">Elite Clientele</h3>
-        <p class="features-paragraph">We have all the dogs, the greatest dogs.</p>
-      </div>
-
-      <div class="col-lg-4 col-sm-12">
-        <i class="fa-solid fa-heart fa-4x"></i>
-        <h3 class="features-h3">Guaranteed to work.</h3>
-        <p class="features-paragraph">Find the love of your dog's life or your money back.</p>
-      </div>
-      
     </div>
   </section>
 
