--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
         14 - Styling Our Website Challenges and Solutions</a> <br>
     <a href="06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/index.html">
         15 - Bootstrap Challenge 1</a> <br>
+    <a href="06 - Introduction to Bootstrap 4/16 - Solution to Bootstrap Challenge 1/index.html">
+        16 - Solution to Bootstrap Challenge 1</a> <br>
 
 </body>
 
