main index for carousel

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
         15 - Bootstrap Challenge 1</a> <br>
     <a href="06 - Introduction to Bootstrap 4/16 - Solution to Bootstrap Challenge 1/index.html">
         16 - Solution to Bootstrap Challenge 1</a> <br>
+    <br>
+    <br>
+    <br>
+    <a href="07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/index.html">
+        01 - The Bootstrap Carousel Part 1</a> <br>
 
 </body>
 
