--- a/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/index.html
+++ b/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/index.html
@@ -99,7 +99,7 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="https://i.imgur.com/4QlGtiP.jpg" alt="dog-profile">
+    <img class="testimonials-image" src="https://i.imgur.com/4QlGtiP.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
