press seciton update

--- a/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/index.html
+++ b/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/index.html
@@ -113,10 +113,10 @@
 
   <section id="press">
     
-    <img src="https://i.imgur.com/ZM0U36c.png" alt="tc-logo">
-    <img src="https://i.imgur.com/mBrYGBA.png" alt="tnw-logo">
-    <img src="https://i.imgur.com/DPD9kfF.png" alt="biz-insider-logo">
-    <img src="https://i.imgur.com/mbI9GLh.png" alt="mashable-logo">
+    <img class="press-logo" src="https://i.imgur.com/ZM0U36c.png" alt="tc-logo">
+    <img class="press-logo" src="https://i.imgur.com/mBrYGBA.png" alt="tnw-logo">
+    <img class="press-logo" src="https://i.imgur.com/DPD9kfF.png" alt="biz-insider-logo">
+    <img class="press-logo" src="https://i.imgur.com/mbI9GLh.png" alt="mashable-logo">
 
   </section>
 
