blueprint for carousel part 2

--- a/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/index.html
+++ b/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/index.html
@@ -99,7 +99,7 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="https://i.imgur.com/4QlGtiP.jpg" alt="dog-profile">
+    <img class="testimonials-image" src="https://i.imgur.com/4QlGtiP.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -113,10 +113,10 @@
 
   <section id="press">
     
-    <img src="https://i.imgur.com/ZM0U36c.png" alt="tc-logo">
-    <img src="https://i.imgur.com/mBrYGBA.png" alt="tnw-logo">
-    <img src="https://i.imgur.com/DPD9kfF.png" alt="biz-insider-logo">
-    <img src="https://i.imgur.com/mbI9GLh.png" alt="mashable-logo">
+    <img class="press-logo" src="https://i.imgur.com/ZM0U36c.png" alt="tc-logo">
+    <img class="press-logo" src="https://i.imgur.com/mBrYGBA.png" alt="tnw-logo">
+    <img class="press-logo" src="https://i.imgur.com/DPD9kfF.png" alt="biz-insider-logo">
+    <img class="press-logo" src="https://i.imgur.com/mbI9GLh.png" alt="mashable-logo">
 
   </section>
 
