main index for cards

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
         01 - The Bootstrap Carousel Part 1</a> <br>
     <a href="07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/index.html">
         02 - The Bootstrap Carousel Part 2</a> <br>
+    <a href="07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html">
+        03 - Bootstrap Cards</a> <br>
 
 </body>
 
