card blueprint update

--- a/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
+++ b/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
@@ -142,6 +142,15 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="card">
+      <div class="card-header">
+        Card Header
+      </div>
+      <div class="card-body">
+        Card Body
+      </div>
+    </div>
+
 
     <h3>Chihuahua</h3>
     <h2>Free</h2>
