deleted card-deck, not supported

--- a/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
+++ b/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
@@ -142,7 +142,7 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     
-    <div class="card-deck">
+    <div class="">
 
       <div class="card">
         <div class="card-header">
