--- a/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
+++ b/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
@@ -142,9 +142,9 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     
-    <div class="">
+    <div class="row">
 
-      <div class="card">
+      <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-header">
           <h3>Chihuahua</h3>
         </div>
