--- a/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
+++ b/07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html
@@ -142,7 +142,7 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     
-    <div class="row">
+    <div class="row container-fluid">
 
       <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-header">
