main index for stacking order

--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
         02 - The Bootstrap Carousel Part 2</a> <br>
     <a href="07 - Intermediate Bootstrap/03 - Bootstrap Cards/index.html">
         03 - Bootstrap Cards</a> <br>
+    <a href="07 - Intermediate Bootstrap/04 - The CSS Z-Index and Stacking Order/index.html">
+        04 - The CSS Z-Index and Stacking Order</a> <br>
 
 </body>
 
