main index for media query

--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
         03 - Bootstrap Cards</a> <br>
     <a href="07 - Intermediate Bootstrap/04 - The CSS Z-Index and Stacking Order/index.html">
         04 - The CSS Z-Index and Stacking Order</a> <br>
+    <a href="07 - Intermediate Bootstrap/05 - Media Query Breakpoints/index.html">
+        05 - Media Query Breakpoints</a> <br>
 
 </body>
 
