index update for media query

--- a/07 - Intermediate Bootstrap/05 - Media Query Breakpoints/index.html
+++ b/07 - Intermediate Bootstrap/05 - Media Query Breakpoints/index.html
@@ -55,8 +55,8 @@
     <div class="row container">
       <div class="col-lg-6">
         <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>&nbsp;Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>&nbsp;Download</button>
+        <button type="button" class="btn btn-dark btn-md download-button"><i class="fa-brands fa-apple"></i>&nbsp;Download</button>
+        <button type="button" class="btn btn-outline-light btn-md download-button"><i class="fa-brands fa-google-play"></i>&nbsp;Download</button>
       </div>
       <div class="col-lg-6">
       <img class="title-image" src="https://i.imgur.com/AhBC81a.png" alt="iphone-mockup">
